Fixed the majority of the bugs (except for the first slide not showing up the instant the website is loaded)

--- a/scroll.css
+++ b/scroll.css
@@ -1,28 +1,60 @@
 .image {
-border: 1em solid #fff;
-border-radius: .25em;
-box-shadow: 1em 1em 2em .25em rgba(0,0,0,.2);
-margin: 2em auto;
-max-width: 600px;
-opacity: 0;
--webkit-transform: translateY(4em) rotateZ(-5deg);
-        transform: translateY(4em) rotateZ(-5deg);
--webkit-transition: opacity .3s .25s ease-out,
-            -webkit-transform 4s .25s cubic-bezier(0,1,.3,1);
-transition: opacity .3s .25s ease-out,
-            -webkit-transform 4s .25s cubic-bezier(0,1,.3,1);
-transition: transform 4s .25s cubic-bezier(0,1,.3,1),
-            opacity .3s .25s ease-out;
-transition: transform 4s .25s cubic-bezier(0,1,.3,1),
-            opacity .3s .25s ease-out,
-            -webkit-transform 4s .25s cubic-bezier(0,1,.3,1);
-width: 90%;
+        border: 1em solid #fff;
+        border-radius: .25em;
+        box-shadow: 1em 1em 2em .25em rgba(0,0,0,.2);
+        margin: 2em auto;
+        max-width: 600px;
+        opacity: 0;
+        -webkit-transform: translateY(4em) rotateZ(-5deg);
+                transform: translateY(4em) rotateZ(-5deg);
+        -webkit-transition: opacity .3s .25s ease-out,
+                -webkit-transform 4s .25s cubic-bezier(0,1,.3,1);
+        transition: opacity .3s .25s ease-out,
+                -webkit-transform 4s .25s cubic-bezier(0,1,.3,1);
+        transition: transform 4s .25s cubic-bezier(0,1,.3,1),
+                opacity .3s .25s ease-out;
+        transition: transform 4s .25s cubic-bezier(0,1,.3,1),
+                opacity .3s .25s ease-out,
+                -webkit-transform 4s .25s cubic-bezier(0,1,.3,1);
+        width: 90%;
 
-will-change: transform, opacity;
+        will-change: transform, opacity;
 }
 
 .image.is-visible {
-opacity: 1;
--webkit-transform: rotateZ(-2deg);
-        transform: rotateZ(-2deg);
+        opacity: 1;
+        -webkit-transform: rotateZ(-2deg);
+                transform: rotateZ(-2deg);
+}
+
+.text {
+        box-sizing: border-box;
+        position: relative; 
+        background: white;
+        padding: 40px;
+        line-height: 1.7; 
+        border-radius: 20px;
+        margin: 50px auto;
+
+        box-shadow: 1em 1em 2em .25em rgba(0,0,0,.2);
+        opacity: 0;
+        -webkit-transform: translateY(8em);
+                transform: translateY(8em);
+        -webkit-transition: opacity .3s .25s ease-out,
+                -webkit-transform 4s .25s cubic-bezier(0,1,.3,1);
+        transition: opacity .3s .25s ease-out,
+                -webkit-transform 4s .25s cubic-bezier(0,1,.3,1);
+        transition: transform 4s .25s cubic-bezier(0,1,.3,1),
+                opacity .3s .25s ease-out;
+        transition: transform 4s .25s cubic-bezier(0,1,.3,1),
+                opacity .3s .25s ease-out,
+                -webkit-transform 4s .25s cubic-bezier(0,1,.3,1);
+
+        will-change: transform, opacity;
+}
+
+.text.is-visible {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+                transform: rotateZ(0);
 }
